CPG-DEV/src/objects/CustomerProfile__c.object
<CustomObject>
    <fields>
        <fullName>AccountGlobalDescription__c</fullName>
        <formula>Account__r.GlobalDescription__c</formula>
        <label>Account Global Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Profiles</relationshipLabel>
        <relationshipName>Customer_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applications__c</fullName>
        <label>Applications</label>
        <picklist>
            <picklistValues>
                <fullName>Value1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Brands__c</fullName>
        <label>Brands</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <globalPicklist>CargillBusiness</globalPicklist>
        <label>Business</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cargill_Ingredients_in_Top_Brands__c</fullName>
        <label>Cargill Ingredients in Top Brands</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvenienceOpportunities__c</fullName>
        <label>Convenience Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CustomerDescription__c</fullName>
        <label>Customer Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DevelopmentFocus__c</fullName>
        <label>Development Focus</label>
        <picklist>
            <picklistValues>
                <fullName>Value1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Drivers__c</fullName>
        <label>Drivers</label>
        <picklist>
            <picklistValues>
                <fullName>Lean &amp; Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better Without</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better With</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaner Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Differentiated Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier/Service Performance</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HealthWellnessOpportunities__c</fullName>
        <label>Health &amp; Wellness Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketShare__c</fullName>
        <label>Market Share</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Channel__c</fullName>
        <formula>Text(Account__r.Market_Channel__c)</formula>
        <label>Market Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Space__c</fullName>
        <label>Opportunity Space</label>
        <picklist>
            <picklistValues>
                <fullName>Antibiotic Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food with a Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Wellness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sensory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value &amp; Service</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Profile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PotentialTools__c</fullName>
        <label>Potential Tools</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Risk Managment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade &amp; Structured Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cargill Optimizing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waste Management</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PreventMoreThanOneRecord__c</fullName>
        <label>PreventMoreThanOneRecord</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryApplication__c</fullName>
        <label>Primary Application</label>
        <picklist>
            <picklistValues>
                <fullName>Bread/ bread products </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweet Biscuits/Cookies </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savory Biscuits/Crackers </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastries/Sweet Goods </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixes &amp; Doughs </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pasta </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Mixes </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carbonated Soft Drinks </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional &amp; Flavored Water </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juice, Juice Drinks, Nectars </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports/Energy </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTD Tea/Coffee </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powdered /Dry Mixes </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid Concentrates </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beer </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine, spirits and alc flavored drinks </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sugar Confectionery </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chewing Gums </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chocolate </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fillings, Coatings, Toppings </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready Meals/Kits </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soups </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sauces, Dressings &amp; Condiments </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oils, Fats and Spreads </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egg Products </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheese </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creams </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid Creamers </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dairy Desserts </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dairy Drinks </fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PrimaryCategory__c</fullName>
        <label>Primary Category</label>
        <picklist>
            <picklistValues>
                <fullName>M1 Product experience/High Vertical Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M2 Value – Product Innovation &amp; Supply Chain/ High Vertical Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M3 Low vertical B2C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M4 Low Vertical integration B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F1 Product Experience &amp; Value Differentiation/B2C – Scratch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F2 Product Experience /B2C – Assembly &amp; B2C – Heat and Serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F3 Value Differentiation/ B2C – Assembly &amp; B2C – Heat and Serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F4 Product Experience/B2B – Move Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F5 Value Differentiation/ B2B – Move Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F6 Product Experience &amp; Value Differentiation/B2B – Manage Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F7 Product Experience &amp; Value Differentiation/Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1  Product experience/High &amp; Medium In-house</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 Value – Product Innovation/High In-House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3 Value – Product Innovation/Medium In-House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4 Product experience &amp; Value – Product Innovation/Low In-House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R5 Value – Supply Chain Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T Trade</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryChannel__c</fullName>
        <label>Primary Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Value1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductLines__c</fullName>
        <description>This may be defined as Picklist or Lookup based on Cargill discussion around Product Hierarachy.</description>
        <label>ProductLines</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RDCapabilities__c</fullName>
        <label>R&amp;D Capabilities</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>outsourced</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RecordNumber__c</fullName>
        <description>This is created for task 154</description>
        <displayFormat>{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SensoryOpportunities__c</fullName>
        <label>Sensory Opportunities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SpecialServices__c</fullName>
        <label>Special Services</label>
        <picklist>
            <picklistValues>
                <fullName>Value1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SustainabilityOpportunities__c</fullName>
        <label>Sustainability Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ValueServiceOpportunities__c</fullName>
        <label>Value &amp; Service Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Way_Customer_Is_Organized__c</fullName>
        <label>Way Customer Is Organized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Customer Profile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Profile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>